--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -176,7 +176,7 @@ executables:
     dependencies:
     - cereal >= 0.5 && <0.6
     - network >= 2.8 && <3.2
-    - connection >= 0.3 && <0.4
+    - crypton-connection >= 0.3 && <0.4
     - network-simple >=0.4.5 && <0.5
     - template-haskell >=2.18 && <2.19
     - haskell-src-exts >= 1.20 && <1.24
@@ -191,7 +191,7 @@ executables:
     dependencies:
     - cereal >= 0.5 && <0.6
     - network >= 2.8 && <3.2
-    - connection >= 0.3 && <0.4
+    - crypton-connection >= 0.3 && <0.4
     - network-simple >=0.4.5 && <0.5
     - template-haskell >=2.18 && <2.19
     - haskell-src-exts >= 1.20 && <1.24
@@ -423,7 +423,7 @@ tests:
     - random
     - cereal >= 0.5 && <0.6
     - network >= 2.8 && <3.2
-    - connection >= 0.3 && <0.4
+    - crypton-connection >= 0.3 && <0.4
     - network-simple >=0.4.5 && <0.5
     - template-haskell >=2.18 && <2.19
     - haskell-src-exts >= 1.20 && <1.24
